# MeterPU

./: CMakeLists.txt  Doxyfile  README  meterpu.h
CMake/: MeterPUConfig.cmake.in
examples/.nvml_calc/: GpuEnergyMeasurement.cu  Makefile
examples/.nvml_calc/1.visual_script/: AGoodStart.R  Lu_R_Lib.R  Makefile
examples/1.CpuTimeMeasurement/: CpuTimeMeasurement.cpp  Makefile
examples/2.CudaTimeMeasurement/: CudaTimeMeasurement.cu  Makefile  MakefileCommon
examples/3.CpuDramEnergyMeasurement/: CpuEnergyMeasurement.cpp  Makefile
examples/3.CpuDramEnergyMeasurement/lib/: meterpu.h
examples/4.GpuEnergyMeasurement-1/: GpuEnergyMeasurement.cu  Makefile
examples/4.GpuEnergyMeasurement-2/: GpuEnergyMeasurement.cu  Makefile  cuda_call.h
examples/5.SystemEnergyMeasurement/: Makefile  SystemEnergyMeasurement.cu
examples/5.SystemEnergyMeasurement/1.DataPlot/1.FirstTry/: data.csv
examples/5.SystemEnergyMeasurement/1.DataPlot/2.TryAgain/: AGoodStart.R  Makefile  data.csv
examples/6.MultipleInclusion/: Func1.cu  Func2.cu  Makefile  SystemEnergyMeasurement.cu
